# structural_design

./: .envrc  flake.nix  pyproject.toml  tmp2.py
beam/: calc.py  main.py  tmp.py  tmp_moe.py
final/: flat.py  graph.py  live_load.py  main.py  main_flat.py  main_live_load.py  misc.py
lib/: api_util.py  batched.py  beam.py  checkify.py  columns.py  displacement_based_forces.py  graph.py  jax_utils.py  lstsq.py  plot.py  simple_solve.py  solvers.py  utils.py
midterm/: build_graph.py  data_to_json.py  main.py  test_lstsq.py
midterm/data/: funicular1.json  funicular2.json  redesign.json  sphere1.json  structure.json
pset3/: main.py
